# spp

./: .gitmodules  README.md  build.bash
conda/: visis.yml
data/: 2p01_smoothed.txt  2p02_smoothed.txt  2p03_smoothed.txt  2p04_smoothed.txt  4p01_smoothed.txt  4p02_smoothed.txt  4p03_smoothed.txt  6p01_smoothed.txt  6p02_smoothed.txt  6p03_smoothed.txt  cha01_smoothed.txt  cha02_smoothed.txt  cha03_smoothed.txt  cha04_smoothed.txt  endmaps_smoothed.txt  pol01_smoothed.txt  pol02_smoothed.txt  pol03_smoothed.txt  pol04_smoothed.txt  (+16 more)
visis/: CMakeLists.txt  visis_main.cc
visis/include/visis/: visis.h  visis_program.h
visis/include/visis/core/coverage/: approx_vis_region.h  buckets.h  coverage.h  filter_coverage.h  sample_coverage.h  target_regions.h
visis/include/visis/core/guards/: guard.h  guards_all.h  guards_ccdt.h  guards_ka.h  guards_random.h  guards_reflex.h  merge_triangles.h  process_guards.h  reflex_vertex.h
visis/include/visis/core/pathfinding/: astar.h  boost_graph.h  dijkstra.h  path_finder.h  visibility_planner.h
visis/include/visis/core/visibility/: visibility_model.h
visis/include/visis/data/: find_file.h  load_map.h  load_mesh.h  load_visibility_region.h  ptree_geom.h
visis/include/visis/drawing/: cairo_geom_drawer.h  colors.h  drawing.h  fancy_drawing.h  random_colors.h
visis/include/visis/statistics/: evaluate_vis.h  statistics.h
visis/libs/: CMakeLists.txt  trivis
visis/src/: CMakeLists.txt
visis/src/visis/: CMakeLists.txt  visis.cc  visis_program.cc
visis/src/visis/core/coverage/: approx_vis_region.cc  buckets.cc  coverage.cc  filter_coverage.cc  sample_coverage.cc  target_regions.cc
visis/src/visis/core/guards/: guards_ccdt.cc  guards_ka.cc  guards_random.cc  guards_reflex.cc  merge_triangles.cc  process_guards.cc  reflex_vertex.cc
visis/src/visis/core/pathfinding/: astar.cc  boost_graph.cc  dijkstra.cc  path_finder.cc  visibility_planner.cc
visis/src/visis/core/visibility/: visibility_model.cc
visis/src/visis/data/: find_file.cc  load_map.cc  load_mesh.cc  load_visibility_region.cc  ptree_geom.cc
visis/src/visis/drawing/: drawing.cc  fancy_drawing.cc  random_colors.cc
visis/src/visis/statistics/: evaluate_vis.cc  statistics.cc
(+14 files in other folders)
